src/objects/LiveAgent_Countries_Per_Button__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Concerned countries that allow each button to be displayed</description>
    <fields>
        <fullName>Button_Name__c</fullName>
        <description>Name of the Live Agent button</description>
        <label>Button Name</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <description>Name of the concerned country</description>
        <label>Country</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Iso_Code__c</fullName>
        <description>Country Iso Code - 2 char</description>
        <label>Iso Code</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sector__c</fullName>
        <label>Sector</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <label>LiveAgent Countries Per Button</label>
</CustomObject>